--- a/MathAssignnmet/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MathAssignnmet/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -830,9 +830,27 @@ GameSession.Replication=True
 GameSession.Physics=True
 GameSession.Networking=True
 GameSession.Actor=True
+LightSource_C.Tick=True
+LightSource_C.ComponentTick=True
+LightSource_C.ComponentReplication=True
+LightSource_C.Variable=True
+LightSource_C.WorldPartition=True
+LightSource_C.Events=True
+LaserBP_C.Tick=True
+LaserBP_C.Replication=True
+LaserBP_C.Rendering=True
+LaserBP_C.Collision=True
+LaserBP_C.Actor=True
+LaserBP_C.Input=True
+LaserBP_C.HLOD=True
+LaserBP_C.Physics=True
+LaserBP_C.WorldPartition=True
+LaserBP_C.Events=True
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Developers/maxpalsson/Collections/LaserBP.LaserBP
+OpenAssetsAtExit=/Game/Developers/maxpalsson/Collections/CubesTransform.CubesTransform
 
 [EditorStartup]
 LastLevel=/Game/StateAndContext
@@ -2095,8 +2113,10 @@ RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLigh
 RecentlyPlaced=/Script/Engine.BlockingVolume;/Engine/Transient.ActorFactoryBoxVolume_8
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Developers/maxpalsson/Collections/NewMaterial
-MRUItem1=/Game/Developers/maxpalsson/Collections/CubesTransform
+MRUItem0=/Game/Developers/maxpalsson/Collections/CubesTransform
+MRUItem1=/Game/Developers/maxpalsson/Collections/LaserBP
+MRUItem2=/Game/Developers/maxpalsson/Collections/LightSource
+MRUItem3=/Game/Developers/maxpalsson/Collections/NewMaterial
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2319,4 +2339,5 @@ ChangeVariableType_Warning=False
 
 [AssetEditorToolkitTabLocation]
 /Game/Developers/maxpalsson/Collections/CubesTransform.CubesTransform=0
+/Game/Developers/maxpalsson/Collections/LightSource.LightSource=0
 
